--- a/src/app/components/buscar-ent/buscar-ent.component.scss
+++ b/src/app/components/buscar-ent/buscar-ent.component.scss
@@ -40,3 +40,17 @@ h5{
   margin-bottom: 12px;
 }
 
+
+.checkboxPersonalizado
+{
+  -ms-transform: scale(2); /* IE */
+  -moz-transform: scale(2); /* FF */
+  -webkit-transform: scale(2); /* Safari and Chrome */
+  -o-transform: scale(2); /* Opera */
+  transform: scale(2);
+  padding: 10px;
+}
+
+.map {
+  min-height: 702px !important;
+}
